# ssiamb

./: .gitignore  LICENSE  PYPI_SETUP.md  README.md  RELEASE_CHECKLIST.md  activate_env.sh  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  todo.md
.github/workflows/: ci.yml  publish.yml
docs/: index.md
docs/reference/: index.md
fixtures/: FIXTURES_REQUIREMENTS.md  FIXTURE_INFO.md  GENERATION_SUMMARY.md  README.md
fixtures/edge_cases/: malformed.vcf
fixtures/expected_outputs/: README.md  ref_mode_summary.tsv  self_mode_summary.tsv
fixtures/manifests/: ref_mode_manifest.tsv  self_mode_manifest.tsv
fixtures/ref_mode/: reference.fna.fai
fixtures/reuse/: mismatched_sample.bam  pre_called.vcf.gz.tbi  pre_mapped.bam  pre_mapped.bam.bai
fixtures/self_mode/: assembly.fna  assembly.fna.fai
fixtures/supporting_files/: assembly_stats.txt  bracken_listeria.tsv  quast_report.txt
galaxy/: README.md  ssiamb.xml  tool_test_output.html  tool_test_output.json
galaxy/test-data/: expected_summary.tsv  test_R1.fastq  test_R2.fastq
recipes/ssiamb/: meta.yaml
site/: 404.html  index.html  objects.inv  sitemap.xml
site/reference/: index.html
site/search/: search_index.json
src/ssiamb/: __init__.py  __main__.py  bracken.py  calling.py  cli.py  config.py  depth.py  errors.py  io_utils.py  mapping.py  models.py  provenance.py  qc.py  refdir.py  reuse.py  runner.py  vcf_ops.py  version.py
src/ssiamb/config/: defaults.yaml
tests/: README.md  test_bracken.py  test_bracken_fixture.py  test_calling.py  test_calling_integration.py  test_cli.py  test_config.py  test_depth.py  test_depth_integration.py  test_dry_run.py  test_error_handling.py  test_io_utils.py  test_mapping.py  test_mapping_core.py  test_mapping_integration.py  test_packaging.py  test_provenance.py  test_qc.py  test_reuse.py  test_reuse_integration.py  test_runner.py  test_runner_integration.py  test_summarize.py  test_vcf_ops.py  test_vcf_ops_integration.py
